--- a/app/Resources/views/default-layout/header.html.twig
+++ b/app/Resources/views/default-layout/header.html.twig
@@ -2,7 +2,7 @@
     <div class="wrapper">
         <div class="clearfix banner-header">
             <a class="banner-logo" href="/">
-                <img src="/images/cp_logo.png" alt="City Pantry" />
+                <img src="/dist/images/cp_logo.png" alt="City Pantry" />
             </a>
 
             <button class="nav-toggle" type="button" data-toggle="collapse" data-target="#main-menu">Menu</button>
