--- a/src/CityPantry/FrontendBundle/Resources/views/Default/login.html.twig
+++ b/src/CityPantry/FrontendBundle/Resources/views/Default/login.html.twig
@@ -12,7 +12,7 @@
 
                         <p class="error" ng-show="loginError" ng-bind="loginError"></p>
 
-                        <form ng-submit="submit()">
+                        <form ng-submit="submit()" class="login">
                             <fieldset>
                                 <div class="form-group">
                                     <label for="login_email">Email</label>
