Admin orders page.

--- a/app/Resources/views/default-layout/footer.html.twig
+++ b/app/Resources/views/default-layout/footer.html.twig
@@ -73,6 +73,6 @@
                 </div>
             </div>
         </section>
-        <p class="content-info-copyright">Copyright &#169; 2015 City Pantry</p>
+        <p class="content-info-copyright">Copyright &#169; {{ "now"|date("Y") }} City Pantry</p>
     </div>
 </footer>
