--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -1,6 +1,7 @@
 @import 'lib/bootstrap-theme.scss';
 @import 'lib/bootstrap.scss';
 @import 'lib/datepicker.scss';
+@import 'lib/ui-grid-unstable.scss';
 
 body {
     background: #fff;
