--- a/src/CityPantry/FrontendBundle/Resources/views/Default/login.html.twig
+++ b/src/CityPantry/FrontendBundle/Resources/views/Default/login.html.twig
@@ -39,26 +39,26 @@
                 </div>
 
                 <div class="col-sm-5 col-sm-push-1">
-                    <div class="island-alt signup">
+                    <div class="island-alt signup" ng-controller="RegisterController">
                         <h2>New to City Pantry? Sign up!</h2>
 
-                        <!-- @todo - put error message here: <p class="error"></p> -->
+                        <p class="error" ng-show="registerError" ng-bind="registerError"></p>
 
-                        <form>
+                        <form ng-submit="submit()" class="register">
                             <fieldset>
                                 <div class="form-group">
                                     <label for="signup_name">Name</label>
-                                    <input class="form-control input-lg" id="signup_name" name="signup_name" type="text" required aria-required="true">
+                                    <input class="form-control input-lg" id="signup_name" name="signup_name" type="text" required aria-required="true" ng-model="name">
                                 </div>
 
                                 <div class="form-group">
                                     <label for="signup_email">Email</label>
-                                    <input class="form-control input-lg" id="signup_email" name="signup_email" type="email" required aria-required="true">
+                                    <input class="form-control input-lg" id="signup_email" name="signup_email" type="email" required aria-required="true" ng-model="email">
                                 </div>
 
                                 <div class="form-group">
                                     <label for="signup_password">Password</label>
-                                    <input class="form-control input-lg" id="signup_password" name="signup_password" type="password" required aria-required="true">
+                                    <input class="form-control input-lg" id="signup_password" name="signup_password" type="password" required aria-required="true" ng-model="plainPassword">
                                 </div>
 
                                 <input class="btn btn-primary btn-lg" name="signup" type="submit" value="Sign up">
