Update 'What is CP?' in FAQ to new definition.

--- a/src/CityPantry/FrontendBundle/Resources/views/Default/faq.html.twig
+++ b/src/CityPantry/FrontendBundle/Resources/views/Default/faq.html.twig
@@ -52,7 +52,7 @@
                     </ul>
 
                     <h3 id="us">What is City Pantry?</h3>
-                    <p>City Pantry is an online marketplace specifically for catering.</p>
+                    <p>City Pantry is a service that provides office catering from independent food vendors.</p>
                     <p>We spend our time finding the best food in London from street vendors, pop-ups, chefs, cooks, restaurants, delis and bakeries, all of whom are now available to cater your next meeting or event.</p>
                     <h3 id="used">Who uses City Pantry?</h3>
                     <p>Some of the ways people currently use the system are:</p>
