Add meta descriptions.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -30,7 +30,7 @@
         <link href="//ajax.googleapis.com/" rel="dns-prefetch" />
         <link href="//www.google-analytics.com/" rel="dns-prefetch" />
         <title>{% block title %}Office Catering in London from City Pantry{% endblock %}</title>
-        <meta name="description" content="" />
+        <meta name="description" content="{% block metaDescription %}{% endblock %}" />
         <link href="/favicon.ico" rel="icon" />
 
         <link href="/dist/css/main.min.css" rel="stylesheet" />
