--- a/src/CityPantry/FrontendBundle/Resources/views/Default/eventCatering.html.twig
+++ b/src/CityPantry/FrontendBundle/Resources/views/Default/eventCatering.html.twig
@@ -2,6 +2,8 @@
 
 {% block title %}Catering Re-imagined for Your Next Event | Interesting catering delivered by City Pantry | City Pantry{% endblock %}
 
+{% block metaDescription %}Order interesting food from London’s best independent cooks, chefs, pop-up restaurants and street food vendors to cater your next event.{% endblock %}
+
 {% block body %}
     <div class="event-catering-header"></div>
 
