--- a/src/CityPantry/FrontendBundle/Resources/views/Default/index.html.twig
+++ b/src/CityPantry/FrontendBundle/Resources/views/Default/index.html.twig
@@ -1,5 +1,9 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}Office Catering in London from City Pantry{% endblock %}
+
+{% block metaDescription %}Order catering for the office or an event. Choose from a curated selection of London’s best cooks.{% endblock %}
+
 {% block body %}
     <section class="hero">
         <div class="hero-wrapper-colour"></div>
