--- a/src/CityPantry/FrontendBundle/Resources/views/Default/officeManagers.html.twig
+++ b/src/CityPantry/FrontendBundle/Resources/views/Default/officeManagers.html.twig
@@ -2,6 +2,8 @@
 
 {% block title %}Easily Cater a Team Breakfast or Lunch | Interesting catering delivered by City Pantry | City Pantry{% endblock %}
 
+{% block metaDescription %}Order amazing food for your office quickly and easily from our selection of London’s best cooks and chefs, including street food vendors and pop-up restaurants.{% endblock %}
+
 {% block body %}
     <div class="office-managers-header"></div>
 
