--- a/src/CityPantry/FrontendBundle/Resources/views/Default/teamLunch.html.twig
+++ b/src/CityPantry/FrontendBundle/Resources/views/Default/teamLunch.html.twig
@@ -2,6 +2,8 @@
 
 {% block title %}Easily Cater a Team Breakfast or Lunch | Interesting catering delivered by City Pantry | City Pantry{% endblock %}
 
+{% block metaDescription %}Order your next team lunch from a hand-picked selection of the most interesting food in London, including street food vendors, pop-up restaurants and independent chefs.{% endblock %}
+
 {% block body %}
     <div class="team-lunch-header"></div>
 
