Fix most order page tests.

--- a/src/CityPantry/FrontendBundle/Resources/views/Admin/orders.html.twig
+++ b/src/CityPantry/FrontendBundle/Resources/views/Admin/orders.html.twig
@@ -6,6 +6,6 @@
     <main class="wrapper" ng-controller="OrderController">
         <h1>Orders</h1>
 
-        <div ui-grid="ordersTable" ui-grid-pagination></div>
+        <div id="ordersTable" ui-grid="ordersTable" ui-grid-pagination></div>
     </main>
 {% endblock %}
