--- a/app/Resources/views/default-layout/footer.html.twig
+++ b/app/Resources/views/default-layout/footer.html.twig
@@ -2,21 +2,21 @@
     <div class="wrapper">
         <section class="content-info-links">
             <div class="row">
-                <div class="col-sm-5 newsletter" ng-controller="NewsletterController">
+                <div class="col-sm-5 newsletter" ng-controller="NewsletterController as newsletter">
                     <h3>Get £25 off your first order</h3>
 
-                    <form class="newsletter-form" role="form" ng-submit="subscribe()" ng-show="!success">
+                    <form class="newsletter-form" role="form" ng-submit="newsletter.subscribe()" ng-show="!newsletter.success">
                         <p>Sign up to our email for a weekly dose of catered inspiration and £25 off your first order.</p>
 
                         <div class="form-group">
                             <label class="sr-only" for="email">Email</label>
-                            <input class="form-control input-lg" name="email" type="email" placeholder="Email address" ng-model="email" />
+                            <input class="form-control input-lg" name="email" type="email" placeholder="Email address" ng-model="newsletter.email" />
                         </div>
 
                         <input class="btn btn-primary btn-lg" type="submit" value="Sign up to weekly email" />
                     </form>
 
-                    <p ng-show="success">
+                    <p ng-show="newsletter.success">
                         You have been subscribed and a £25 voucher has been emailed to you.
                     </p>
                 </div>
