--- a/src/CityPantry/FrontendBundle/Resources/views/Default/login.html.twig
+++ b/src/CityPantry/FrontendBundle/Resources/views/Default/login.html.twig
@@ -7,26 +7,26 @@
         <div class="wrapper">
             <div class="row">
                 <div class="col-sm-5 col-sm-push-1">
-                    <div class="island login" ng-controller="LoginController">
+                    <div class="island login" ng-controller="LoginController as login">
                         <h2>Log in with a City Pantry account</h2>
 
-                        <p class="error" ng-show="loginError" ng-bind="loginError"></p>
+                        <p class="error" ng-show="login.loginError" ng-bind="login.loginError"></p>
 
-                        <form ng-submit="submit()" class="login">
+                        <form ng-submit="login.submit()" class="login">
                             <fieldset>
                                 <div class="form-group">
                                     <label for="login_email">Email</label>
-                                    <input class="form-control input-lg" id="login_email" name="login_email" type="email" required aria-required="true" ng-model="email" />
+                                    <input class="form-control input-lg" id="login_email" name="login_email" type="email" required aria-required="true" ng-model="login.email" />
                                 </div>
 
                                 <div class="form-group">
                                     <label for="login_password">Password</label>
-                                    <input class="form-control input-lg" id="login_password" name="login_password" type="password" required aria-required="true" ng-model="plainPassword" />
+                                    <input class="form-control input-lg" id="login_password" name="login_password" type="password" required aria-required="true" ng-model="login.plainPassword" />
                                 </div>
 
                                 <div class="form-group">
                                     <label class="checkbox-inline">
-                                        <input name="login_remember" type="checkbox" checked value="true" ng-model="rememberMe" /> Remember me
+                                        <input name="login_remember" type="checkbox" checked value="true" ng-model="login.rememberMe" /> Remember me
                                     </label>
                                 </div>
 
@@ -39,26 +39,26 @@
                 </div>
 
                 <div class="col-sm-5 col-sm-push-1">
-                    <div class="island-alt signup" ng-controller="RegisterController">
+                    <div class="island-alt signup" ng-controller="RegisterController as register">
                         <h2>New to City Pantry? Sign up!</h2>
 
-                        <p class="error" ng-show="registerError" ng-bind="registerError"></p>
+                        <p class="error" ng-show="register.registerError" ng-bind="register.registerError"></p>
 
-                        <form ng-submit="submit()" class="register">
+                        <form ng-submit="register.submit()" class="register">
                             <fieldset>
                                 <div class="form-group">
                                     <label for="signup_name">Name</label>
-                                    <input class="form-control input-lg" id="signup_name" name="signup_name" type="text" required aria-required="true" ng-model="name">
+                                    <input class="form-control input-lg" id="signup_name" name="signup_name" type="text" required aria-required="true" ng-model="register.name">
                                 </div>
 
                                 <div class="form-group">
                                     <label for="signup_email">Email</label>
-                                    <input class="form-control input-lg" id="signup_email" name="signup_email" type="email" required aria-required="true" ng-model="email">
+                                    <input class="form-control input-lg" id="signup_email" name="signup_email" type="email" required aria-required="true" ng-model="register.email">
                                 </div>
 
                                 <div class="form-group">
                                     <label for="signup_password">Password</label>
-                                    <input class="form-control input-lg" id="signup_password" name="signup_password" type="password" required aria-required="true" ng-model="plainPassword">
+                                    <input class="form-control input-lg" id="signup_password" name="signup_password" type="password" required aria-required="true" ng-model="register.plainPassword">
                                 </div>
 
                                 <input class="btn btn-primary btn-lg" name="signup" type="submit" value="Sign up">
