Fix admin e2e tests.

--- a/app/Resources/views/nav/staff.html.twig
+++ b/app/Resources/views/nav/staff.html.twig
@@ -5,7 +5,7 @@
         <li role="presentation"><a tabindex="-1" href="/logout" role="menuitem">Log out</a></li>
     </ul>
 </li>
-<li><a href="/admin/order">Orders</a></li>
+<li><a href="/admin/orders">Orders</a></li>
 <li><a href="/admin/order/courier">Courier</a></li>
 <li><a href="/admin/package">Packages</a></li>
 <li><a href="/admin/vendor">Vendors</a></li>
