--- a/src/CityPantry/FrontendBundle/Resources/views/Admin/orders.html.twig
+++ b/src/CityPantry/FrontendBundle/Resources/views/Admin/orders.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <main class="wrapper" ng-controller="AdminOrderController as order">
         <h1>Orders</h1>
-        
-        <div ui-grid="order.gridOptions" ui-grid-pagination></div>
+
+        <div ui-grid="order.gridOptions" ui-grid-pagination id="orders-table"></div>
     </main>
 {% endblock %}
