Fix JS structure.

--- a/src/CityPantry/FrontendBundle/Resources/views/Admin/orders.html.twig
+++ b/src/CityPantry/FrontendBundle/Resources/views/Admin/orders.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Orders{% endblock %}
 
 {% block body %}
-    <main class="wrapper" ng-controller="AdminOrderController as order">
+    <main class="wrapper" ng-controller="AdminOrdersController as order">
         <h1>Orders</h1>
 
         <div ui-grid="order.gridOptions" ui-grid-pagination id="orders-table"></div>
