Make all ng-click links have a pointer cursor.

--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -3079,4 +3079,5 @@ fieldset[disabled] .btn-primary.active {
     filter: progid:DXImageTransform.Microsoft.gradient(enabled=false);
 }
 
+@import 'links.scss';
 @import 'footer.scss';
