Fix staff nav links.

--- a/app/Resources/views/nav/staff.html.twig
+++ b/app/Resources/views/nav/staff.html.twig
@@ -7,9 +7,9 @@
 </li>
 <li><a href="/admin/orders">Orders</a></li>
 <li><a href="/admin/order/courier">Courier</a></li>
-<li><a href="/admin/package">Packages</a></li>
-<li><a href="/admin/vendor">Vendors</a></li>
-<li><a href="/admin/customer">Customers</a></li>
+<li><a href="/admin/packages">Packages</a></li>
+<li><a href="/admin/vendors">Vendors</a></li>
+<li><a href="/admin/customers">Customers</a></li>
 <li class="dropdown">
     <a id="more" href="#" role="button" data-toggle="dropdown">More <span class="caret"></span></a>
     <ul class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="more">
