--- a/app/Resources/views/nav/staff.html.twig
+++ b/app/Resources/views/nav/staff.html.twig
@@ -1,4 +1,4 @@
-<li class="dropdown open">
+<li class="dropdown">
     <a id="dLabel" href="#" role="button" data-toggle="dropdown">My account <span class="caret"></span></a>
     <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
         <li role="presentation"><a tabindex="-1" href="/customer/account" role="menuitem">My details</a></li>
@@ -10,6 +10,7 @@
 <li><a href="/admin/packages">Packages</a></li>
 <li><a href="/admin/vendors">Vendors</a></li>
 <li><a href="/admin/customers">Customers</a></li>
+<li><a href="/admin/users">Users</a></li>
 <li class="dropdown">
     <a id="more" href="#" role="button" data-toggle="dropdown">More <span class="caret"></span></a>
     <ul class="dropdown-menu dropdown-menu-right" role="menu" aria-labelledby="more">
