--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -69,6 +69,8 @@
         {% endif %}
 
         <script src="/dist/js/built.js"></script>
+
+        <base href="/" />
     </head>
     <body ng-app="cp">
         {% include 'default-layout/header.html.twig' %}
