--- a/src/CityPantry/FrontendBundle/Resources/views/Admin/vendor.html.twig
+++ b/src/CityPantry/FrontendBundle/Resources/views/Admin/vendor.html.twig
@@ -3,7 +3,6 @@
 {% block title %}Vendor {{ vendor.id }}{% endblock %}
 
 {% block body %}
-    <main class="wrapper">
-        <h1>Vendor {{ vendor.id }}</h1>
+    <main class="wrapper" ng-view>
     </main>
 {% endblock %}
