Fix search button alignment on the home page.

--- a/src/CityPantry/FrontendBundle/Resources/views/Default/index.html.twig
+++ b/src/CityPantry/FrontendBundle/Resources/views/Default/index.html.twig
@@ -13,7 +13,7 @@
 
             <h2 class="hidden-xs">Order interesting food curated by us from London&#8217;s best cooks.</h2>
 
-            <form class="form-inline hero-search hero-search-alt" id="hero-search" action="/search" method="get" role="form">
+            <form class="form-inline hero-search hero-search-alt" action="/search" method="get" role="form">
                 <div class="form-group">
                     <label class="sr-only" for="location">Enter your postcode</label>
                     <input class="form-control input-lg" name="location" id="location" type="text" autocomplete="off" placeholder="Enter your postcode (e.g. SW9 8LA)" />
