Angular-ify the customers and edit customer pages.

--- a/src/CityPantry/FrontendBundle/Resources/views/Admin/customers.html.twig
+++ b/src/CityPantry/FrontendBundle/Resources/views/Admin/customers.html.twig
@@ -3,9 +3,6 @@
 {% block title %}Customers{% endblock %}
 
 {% block body %}
-    <main class="wrapper" ng-controller="AdminCustomersController as customers">
-        <h1>Customers</h1>
-
-        <div ui-grid="customers.gridOptions" ui-grid-pagination id="customers-table"></div>
+    <main class="wrapper" ng-view>
     </main>
 {% endblock %}
