--- a/src/CityPantry/FrontendBundle/Resources/views/Admin/customer.html.twig
+++ b/src/CityPantry/FrontendBundle/Resources/views/Admin/customer.html.twig
@@ -3,7 +3,6 @@
 {% block title %}Customer {{ customer.id }}{% endblock %}
 
 {% block body %}
-    <main class="wrapper">
-        <h1>Customer {{ customer.id }}</h1>
+    <main class="wrapper" ng-view>
     </main>
 {% endblock %}
