--- a/src/CityPantry/FrontendBundle/Resources/views/Admin/vendors.html.twig
+++ b/src/CityPantry/FrontendBundle/Resources/views/Admin/vendors.html.twig
@@ -3,9 +3,6 @@
 {% block title %}Vendors{% endblock %}
 
 {% block body %}
-    <main class="wrapper" ng-controller="AdminVendorsController as vendors">
-        <h1>Vendors</h1>
-
-        <div ui-grid="vendors.gridOptions" ui-grid-pagination id="vendors-table"></div>
+    <main class="wrapper" ng-view>
     </main>
 {% endblock %}
