Angular-ify the packages page.

--- a/src/CityPantry/FrontendBundle/Resources/views/Admin/packages.html.twig
+++ b/src/CityPantry/FrontendBundle/Resources/views/Admin/packages.html.twig
@@ -3,9 +3,6 @@
 {% block title %}Packages{% endblock %}
 
 {% block body %}
-    <main class="wrapper" ng-controller="AdminPackagesController as packages">
-        <h1>Packages</h1>
-
-        <div ui-grid="packages.gridOptions" ui-grid-pagination id="packages-table"></div>
+    <main class="wrapper" ng-view>
     </main>
 {% endblock %}
