Angular-ify the orders and edit order page.

--- a/src/CityPantry/FrontendBundle/Resources/views/Admin/order.html.twig
+++ b/src/CityPantry/FrontendBundle/Resources/views/Admin/order.html.twig
@@ -3,7 +3,6 @@
 {% block title %}Order {{ order.id }}{% endblock %}
 
 {% block body %}
-    <main class="wrapper">
-        <h1>Order {{ order.id }}</h1>
+    <main class="wrapper" ng-view>
     </main>
 {% endblock %}
