--- a/src/CityPantry/FrontendBundle/Resources/views/Admin/orders.html.twig
+++ b/src/CityPantry/FrontendBundle/Resources/views/Admin/orders.html.twig
@@ -3,9 +3,6 @@
 {% block title %}Orders{% endblock %}
 
 {% block body %}
-    <main class="wrapper" ng-controller="AdminOrdersController as order">
-        <h1>Orders</h1>
-
-        <div ui-grid="order.gridOptions" ui-grid-pagination id="orders-table"></div>
+    <main class="wrapper" ng-view>
     </main>
 {% endblock %}
