--- a/src/CityPantry/FrontendBundle/Resources/views/Default/index.html.twig
+++ b/src/CityPantry/FrontendBundle/Resources/views/Default/index.html.twig
@@ -19,7 +19,7 @@
                     <input class="form-control input-lg" name="location" id="location" type="text" autocomplete="off" placeholder="Enter your postcode (e.g. SW9 8LA)" />
                 </div>
 
-                <input class="btn btn-primary btn-lg btn-block" name="submit" type="submit" value="Show me the food">
+                <input class="btn btn-primary btn-lg btn-block" type="submit" value="Show me the food">
             </form>
 
             <div class="hidden-xs hero-testimonial">
