Fix navigation dropdowns.

--- a/app/Resources/views/nav/customer.html.twig
+++ b/app/Resources/views/nav/customer.html.twig
@@ -1,4 +1,4 @@
-<li class="dropdown open">
+<li class="dropdown" ng-click="showMyAccountDropdown = !showMyAccountDropdown" ng-class="{open: showMyAccountDropdown}">
     <a id="dLabel" href="#" role="button" data-toggle="dropdown">My account <span class="caret"></span></a>
     <ul class="dropdown-menu" role="menu" aria-labelledby="dLabel">
         <li role="presentation"><a tabindex="-1" href="/customer/orders" role="menuitem">Orders</a></li>
