Notification model and service.

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -79,6 +79,8 @@
 
         {% include 'default-layout/footer.html.twig' %}
 
+        {% include 'default-layout/notification-modal.html.twig' %}
+
         {% if includeAnalyticsJs %}
             <!-- Start of Async HubSpot Analytics Code -->
             <script type="text/javascript">
