--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -2989,4 +2989,5 @@ fieldset[disabled] .btn-primary.active {
 
 @import 'links.scss';
 @import 'footer.scss';
+@import 'modal.scss';
 @import 'admin/orders.scss';
