Courier orders page.

--- a/app/Resources/views/nav/staff.html.twig
+++ b/app/Resources/views/nav/staff.html.twig
@@ -6,7 +6,7 @@
     </ul>
 </li>
 <li><a href="/admin/orders">Orders</a></li>
-<li><a href="/admin/order/courier">Courier</a></li>
+<li><a href="/admin/orders/courier">Courier</a></li>
 <li><a href="/admin/packages">Packages</a></li>
 <li><a href="/admin/vendors">Vendors</a></li>
 <li><a href="/admin/customers">Customers</a></li>
