--- a/src/web/templates/admin/edit-order.html
+++ b/src/web/templates/admin/edit-order.html
@@ -1,30 +1,40 @@
 <h1>Order {{ order.id }}</h1>
 
+<h2>Delivery details</h2>
+
+<p>Is courier? {{ order.isCourier ? 'yes' : 'no' }}</p>
+
 <h2>Edit Details</h2>
 
 <form role="form" ng-submit="save()">
-    <div class="form-group" ng-if="order.pickupDate">
+    <div class="form-group" ng-if="order.isCourier">
         <label for="pickup_date">Pickup date and time</label>
-        <input class="form-control input-lg" id="pickup_date" type="text" required aria-required="true" ng-model="order.pickupDate" convert-date>
+        <input class="form-control input-lg" id="pickup_date" type="text" required aria-required="true" ng-model="order.pickupDate" convert-date />
+        <p>Changing this will trigger an email to the vendor.</p>
     </div>
-    
+
     <div class="form-group">
         <label for="delivery_date">Delivery date and time</label>
-        <input class="form-control input-lg" id="delivery_date" type="text" required aria-required="true" ng-model="order.date" convert-date>
+        <input class="form-control input-lg" id="delivery_date" type="text" required aria-required="true" ng-model="order.requestedDeliveryDate" convert-date />
+        <p>Changing this will trigger an email to the vendor and customer. The vendor will have to confirm if they can accept the order.</p>
     </div>
-    
+
     <div class="form-group">
         <label for="head_count">Number of people</label>
         <select class="form-control input-lg" id="head_count" required aria-required="true" ng-model="headCount" ng-options="option as option for option in headCountOptions"></select>
+        <p>Changing this will trigger an email to the vendor and customer. The vendor will have to confirm if they can accept the order. If this is increased and the order is not paid on account, the order's payment card will be charged.</p>
     </div>
-    
+
     <div class="form-group">
         <label for="vegetarian_head_count">How many people are vegetarian?</label>
         <select class="form-control input-lg" id="vegetarian_head_count" required aria-required="true" ng-model="vegetarianHeadCount" ng-options="option as option for option in vegetarianHeadCountOptions"></select>
+        <p>Changing this will trigger an email to the vendor and customer. The vendor will have to confirm if they can accept the order.</p>
     </div>
-    
-    <input class="btn btn-primary btn-lg" type="submit" value="Save">
+
+    <input class="btn btn-primary btn-lg" type="submit" value="Save" />
 </form>
+
+<br />
 
 <h2>Messages</h2>
 
