--- a/src/web/templates/admin/customers.html
+++ b/src/web/templates/admin/customers.html
@@ -1,3 +1,3 @@
 <h1>Customers</h1>
 
-<div ui-grid="customers.gridOptions" ui-grid-pagination id="customers-table"></div>
+<div ui-grid="gridOptions" ui-grid-pagination id="customers-table"></div>
