Fixes for toggling whether customer is paid on account.

--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -2991,3 +2991,4 @@ fieldset[disabled] .btn-primary.active {
 @import 'footer.scss';
 @import 'modal.scss';
 @import 'admin/orders.scss';
+@import 'admin/customers.scss';
