--- a/src/web/templates/admin/edit-order.html
+++ b/src/web/templates/admin/edit-order.html
@@ -9,26 +9,26 @@
 <form role="form" ng-submit="save()">
     <div class="form-group" ng-if="order.isCourier">
         <label for="pickup_date">Pickup date and time</label>
-        <input class="form-control input-lg" id="pickup_date" type="text" required aria-required="true" ng-model="order.pickupDate" convert-date />
-        <p>Changing this will trigger an email to the vendor.</p>
+        <input class="form-control input-lg" id="pickup_date" type="text" required aria-describedby="pickup_date_help" aria-required="true" ng-model="order.pickupDate" convert-date />
+        <span class="help-block" id="pickup_date_help">Changing this will trigger an email to the vendor.</span>
     </div>
 
     <div class="form-group">
         <label for="delivery_date">Delivery date and time</label>
-        <input class="form-control input-lg" id="delivery_date" type="text" required aria-required="true" ng-model="order.requestedDeliveryDate" convert-date />
-        <p>Changing this will trigger an email to the vendor and customer. The vendor will have to confirm if they can accept the order.</p>
+        <input class="form-control input-lg" id="delivery_date" type="text" required aria-describedby="delivery_date_help" aria-required="true" ng-model="order.requestedDeliveryDate" convert-date />
+        <span class="help-block" id="delivery_date_help">Changing this will trigger an email to the vendor and customer. The vendor will have to confirm if they can accept the order.</span>
     </div>
 
     <div class="form-group">
         <label for="head_count">Number of people</label>
-        <select class="form-control input-lg" id="head_count" required aria-required="true" ng-model="headCount" ng-options="option as option for option in headCountOptions"></select>
-        <p>Changing this will trigger an email to the vendor and customer. The vendor will have to confirm if they can accept the order. If this is increased and the order is not paid on account, the order's payment card will be charged.</p>
+        <select class="form-control input-lg" id="head_count" required aria-describedby="head_count_help" aria-required="true" ng-model="headCount" ng-options="option as option for option in headCountOptions"></select>
+        <span class="help-block" id="head_count_help">Changing this will trigger an email to the vendor and customer. The vendor will have to confirm if they can accept the order. If this is increased and the order is not paid on account, the order’s payment card will be charged.</span>
     </div>
 
     <div class="form-group">
         <label for="vegetarian_head_count">How many people are vegetarian?</label>
-        <select class="form-control input-lg" id="vegetarian_head_count" required aria-required="true" ng-model="vegetarianHeadCount" ng-options="option as option for option in vegetarianHeadCountOptions"></select>
-        <p>Changing this will trigger an email to the vendor and customer. The vendor will have to confirm if they can accept the order.</p>
+        <select class="form-control input-lg" id="vegetarian_head_count" required aria-describedby="vegetarian_head_count_help" aria-required="true" ng-model="vegetarianHeadCount" ng-options="option as option for option in vegetarianHeadCountOptions"></select>
+        <span class="help-block" id="vegetarian_head_count_help">Changing this will trigger an email to the vendor and customer. The vendor will have to confirm if they can accept the order.</span>
     </div>
 
     <input class="btn btn-primary btn-lg" type="submit" value="Save" />
