Added order details to edit order page.

--- a/src/web/scss/main.scss
+++ b/src/web/scss/main.scss
@@ -2990,5 +2990,6 @@ fieldset[disabled] .btn-primary.active {
 @import 'links.scss';
 @import 'footer.scss';
 @import 'modal.scss';
-@import 'admin/orders.scss';
 @import 'admin/customers.scss';
+@import 'admin/general.scss';
+@import 'admin/orders.scss';
