--- a/src/web/templates/admin/edit-order.html
+++ b/src/web/templates/admin/edit-order.html
@@ -13,7 +13,7 @@
             <input class="form-control input-lg" id="order_date" type="text" readonly ng-model="order.date" convert-date />
         </div>
 
-        <div class="form-group" ng-if="order.isCourier && order.pickupDate !== null">
+        <div class="form-group" ng-if="order.isCourier">
             <label for="pickup_date">Pickup date and time</label>
             <input class="form-control input-lg" id="pickup_date" type="text" required aria-describedby="pickup_date_help" aria-required="true" ng-model="order.pickupDate" convert-date />
             <span class="help-block" id="pickup_date_help">Changing this will trigger an email to the vendor.</span>
@@ -35,9 +35,9 @@
             <input class="form-control input-lg" id="company_name" type="text" readonly ng-model="order.companyName" />
         </div>
 
-        <div class="form-group" ng-if="order.isCourier && order.pickupAddress !== null">
+        <div class="form-group" ng-if="order.pickupAddress !== null">
             <label for="pickup_address">Pickup address</label>
-            <input class="form-control input-lg" id="pickup_address" type="text" readonly ng-model="order.pickupAddress" />
+            <input class="form-control input-lg" id="pickup_address" type="text" readonly ng-model="order.pickupAddressString" />
         </div>
 
         <div class="form-group" ng-if="order.deliveryAddressString !== null">
@@ -84,32 +84,32 @@
 
         <div class="form-group">
             <label for="order_status">Order status</label>
-            <input class="form-control input-lg" id="order_status" type="text" readonly ng-model="order.statusText | getOrderStatusText" />
+            <input class="form-control input-lg" id="order_status" type="text" readonly ng-model="order.statusText" format-order-status-text />
         </div>
 
         <div class="form-group" ng-if="order.subTotalExcludingVat !== null">
             <label for="subtotal_amount">Subtotal</label>
-            <input class="form-control input-lg" id="subtotal_amount" type="text" readonly ng-model="order.subTotalExcludingVat | currency:'£':2" />
+            <input class="form-control input-lg" id="subtotal_amount" type="text" readonly ng-model="order.subTotalExcludingVat" format-currency />
         </div>
 
         <div class="form-group" ng-if="order.shippingTotalExcludingVatAmount !== null">
             <label for="delivery_amount">Delivery</label>
-            <input class="form-control input-lg" id="delivery_amount" type="text" readonly ng-model="order.shippingTotalExcludingVatAmount | currency:'£':2" />
+            <input class="form-control input-lg" id="delivery_amount" type="text" readonly ng-model="order.shippingTotalExcludingVatAmount" format-currency />
         </div>
 
         <div class="form-group" ng-if="order.promotion !== null">
             <label for="discount_amount">Discount</label>
-            <input class="form-control input-lg" id="discount_amount" type="text" readonly ng-model="order.voucherAmount | currency:'£':2" />
+            <input class="form-control input-lg" id="discount_amount" type="text" readonly ng-model="order.voucherAmount" format-currency />
         </div>
 
         <div class="form-group" ng-if="order.taxAmount !== null">
             <label for="vat_amount"><abbr title="value added tax">VAT</abbr></label>
-            <input class="form-control input-lg" id="vat_amount" type="text" readonly ng-model="order.taxAmount | currency:'£':2" />
+            <input class="form-control input-lg" id="vat_amount" type="text" readonly ng-model="order.taxAmount" format-currency />
         </div>
 
         <div class="form-group" ng-if="order.totalAmount !== null">
             <label for="total_amount">Grand total</label>
-            <input class="form-control input-lg" id="total_amount" type="text" readonly ng-model="order.totalAmount | currency:'£':2" />
+            <input class="form-control input-lg" id="total_amount" type="text" readonly ng-model="order.totalAmount" format-currency />
         </div>
 
         <input class="btn btn-primary btn-lg" type="submit" value="Save" />
